--- a/src/p3at_description/config/nav2_params.yaml
+++ b/src/p3at_description/config/nav2_params.yaml
@@ -93,24 +93,28 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
+      #Bumped up from 0.25
+      xy_goal_tolerance: 0.5
+      yaw_goal_tolerance: 0.5
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
-      time_steps: 25 #Change to 25
+      time_steps: 52 #Change to 25
       model_dt: 0.05
       batch_size: 2000
+      #Bumped from 3.0
       ax_max: 3.0
       ax_min: -3.0
       ay_max: 3.0
       az_max: 3.5
-      vx_std: 0.2
+      vx_std: 5.0
       vy_std: 0.2
-      wz_std: 0.4
-      vx_max: 0.5
+      wz_std: 2.0
+      #Increased from 0.5
+      vx_max: 1.5
       vx_min: -0.35
       vy_max: 0.5
-      wz_max: 1.9
+      #Decreased from 1.9
+      wz_max: 1.0
       iteration_count: 1
       prune_distance: 1.7
       transform_tolerance: 0.1
@@ -150,11 +154,13 @@ controller_server:
       CostCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 3.81
-        near_collision_cost: 253
+        # cost_weight: 3.81
+        cost_weight: 0.5
+        near_collision_cost: 250
         critical_cost: 300.0
         consider_footprint: false
-        collision_cost: 1000000.0
+        collision_cost: 100000.0
+        #Changed  near_goal_distance: 1.0
         near_goal_distance: 1.0
         trajectory_point_step: 2
       PathAlignCritic:
@@ -200,8 +206,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.40
+        cost_scaling_factor: 1.0
+        inflation_radius: 0.4
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -234,6 +240,7 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
+      #Changed  rolling_window: true
       rolling_window: true
       robot_radius: 0.22
       resolution: 0.05
@@ -262,8 +269,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.7
+        cost_scaling_factor: 1.0
+        inflation_radius: 0.40
       always_send_full_costmap: True
 
 # The yaml_filename does not need to be specified since it going to be set by defaults in launch.
